flux/infrastructure/micro/services/beckflow/service.yaml
# Auto-split from cluster files
apiVersion: v1
kind: Service
metadata:
  name: beckflow
  namespace: micro
spec:
  selector:
    app: beckflow
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  - name: metrics
    port: 9090
    targetPort: 8080
    protocol: TCP
