flux/infrastructure/micro/services/beckflow/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: beckflow
  namespace: micro
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.tools.becklab.cloud`)
      kind: Rule
      middlewares:
        - name: beckflow-role-chain
          namespace: identity
      services:
        - name: beckflow
          port: 80
          sticky: false
